Bug 82967 - Weston client always maximizes on primary display in multi-head setup
Summary: Weston client always maximizes on primary display in multi-head setup
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-22 19:40 UTC by Anu Reddy
Modified: 2014-09-12 16:47 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Anu Reddy 2014-08-22 19:40:40 UTC
Steps to Reproduce:
1. Connect and identify two displays as display1 (primary) and display2 (secondary).
2. Launch weston.
3. Launch a client on display2:e.g. weston-terminal.
4. Maximize the client on display2 via maximize button.
5. Observe that client maximizes on display1 instead of display2(disappears completely from display2).
6. Restore that client on display1 via maximize/restore button.
7. Observe that client restores on display2 instead of display1(disappears completely from display1).


Software Stack:
wayland (HEAD) remotes/origin/HEAD-0-g6d0f298 
drm (HEAD) heads/master-16-gd686160 
mesa (HEAD) remotes/origin/10.2-0-gd82ca4e 
libva (HEAD) libva-1.3.1-0-g053f70f 
intel-driver (HEAD) 1.3.1-0-ga720bc8 
cairo (HEAD) heads/1.12-0-g59e2a93 
libinput (HEAD) heads/master-163-gbb10ec8 
weston (HEAD) remotes/origin/master-0-g652c794
Comment 1 Pekka Paalanen 2014-09-05 10:10:44 UTC
There is a pair of patches fixing this very issue, but the first one seems strange, so the discussion is open:
http://lists.freedesktop.org/archives/wayland-devel/2014-September/thread.html#17015
Comment 2 Pekka Paalanen 2014-09-10 13:36:47 UTC
Should be fixed by:

commit bfbb64bb75e8c61b1d8580ab688e494663feb4d0
Author: Marek Chalupa <mchqwerty@gmail.com>
Date:   Mon Sep 8 12:34:20 2014 +0200

    xdg-shell: update shsurf->output when maximizing

and

commit 8b771af9869442d4f4f5437e7ae3f6d3e9367b78
Author: Marek Chalupa <mchqwerty@gmail.com>
Date:   Mon Sep 1 17:20:33 2014 +0200

    xdg-shell: fix maximizing in multi-head setup


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.